[package]
name = "blinc_skeleton"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Runtime poser for Blinc — evaluates glTF animations, composes joint hierarchies, produces GPU-ready skinning matrices"
repository = "https://github.com/project-blinc/blinc_skeleton"
readme = "README.md"
rust-version = "1.75"
keywords = ["animation", "skeleton", "skinning", "gltf", "blinc"]
categories = ["graphics", "game-development"]

# Standalone package — not a member of the Blinc workspace.

[dependencies]
# Pinned `git` deps. Local-dev override is via `[patch]` in the
# consuming workspace's Cargo.toml — see `blinc_gltf/Cargo.toml` for
# the example snippet. Bump in lockstep with the upstream commits.
blinc_core = { git = "https://github.com/project-blinc/Blinc.git", rev = "335f6fc85c5a60a5e3307a74707d83a21861a31b" }
blinc_gltf = { git = "https://github.com/project-blinc/blinc_gltf.git", rev = "3c8cb8986bdc9f79c069bdc386c2ebc638474d5e" }
